third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/key/newline-4.stderr
TOML parse error at line 1, column 3
  |
1 | """long
  |   ^
expected `.`, `=`
